# wmma-intrinsics

./: CMakeLists.txt  LICENSE  README.md  intrinsics_wmma.art  test.art
backend/: backend_blas.art  backend_cpu.art  backend_cuda.art  backend_gpu.art  backend_hsa.art  backend_levelzero.art  backend_nvvm.art  backend_oneapi.art  backend_prgmod.art  common.art  cuda_shim.cu  intrinsics_wmma.art
test/: CMakeLists.txt  common.art  common_blas.art  common_blocked.art  large.art  layout.art  medium.art  nvvm_ref.art  nvvm_ref_blas.art  oneapi.art  oneapi_double.art  simple.art
test/halide/: CMakeLists.txt  halide.art  halide.cpp  halide_generator.cpp
test/layouts/: large.art  layout.art  medium.art  simple.art
test/oneapi/: CMakeLists.txt  oneapi.art  oneapi_double.art  oneapi_half.art
test/operations/: blas.art  blocked.art  cuda_blas.art  cuda_blocked.art  cuda_ref.art  cuda_tiled.art  hsa_blas.art  hsa_blocked.art  hsa_ref.art  hsa_tiled.art  lzero_blas.art  lzero_blocked.art  lzero_ref.art  lzero_tiled.art  nvvm_blas.art  nvvm_blocked.art  nvvm_ref.art  nvvm_tiled.art  prgmod.art  tiled.art
